--- a/analysis/ObjGap.rmd
+++ b/analysis/ObjGap.rmd
@@ -1,7 +1,7 @@
 ---
 title: "'gap' issue"
 author: "Wei Wang"
-date: 
+date: 2017-06-12
 output: html_document
 ---
 
@@ -263,8 +263,6 @@ rank1test_0(1,100,200,1,0.6,1,2)
 ```{r}
 rank1test_0(1,60,100,1,0.6,1,0.5)
 ```
-
-
 
 ## Session information
 
