--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -25,7 +25,7 @@ Click on this [pairwise plot](pairwiseplotofflashgtexzscore.html) to see more de
 
 ### Issues
 
-Click on this [gap issue](ObjGap.html) to see more details.
+Click on this [gap issue](ObjGap.html) to see more details. (test)
 
 ### meeting summary
 
