Files commited by wflow_commit.

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -27,6 +27,8 @@ Click on this [pairwise plot](pairwiseplotofflashgtexzscore.html) to see more de
 
 Click on this [gap issue](ObjGap.html) to see more details. (test)
 
+Click on this [rank 0 vs rank 1](Objcheck_1.html) to see more details.
+
 ### meeting summary
 
 [04-26](meetnotes.html)
