--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -28,7 +28,7 @@ Click on this [pairwise plot](pairwiseplotofflashgtexzscore.html) to see more de
 Click on this [gap issue](ObjGap.html) to see more details. (test)
 
 
-Click on this [summary of the rank0 vs rank1](Obj_summary.html) to see more details.
+Click on this [summary of the rank0 vs rank1](Obj_summary.html) to see a simple summary to the following two items.
 
 - Click on this [rank 0 vs rank 1](Objcheck_1.html) to see more details.
 - Click on this [rank 0 vs rank 1: fdr with penalty](Objcheck_2.html) to see more details.
