--- a/analysis/Objcheck_2.Rmd
+++ b/analysis/Objcheck_2.Rmd
@@ -211,6 +211,7 @@ sim_rank0(K=1,N = 100, P=200, SF = 0.8, SL = 0.8, signal = 1,noise = 2)
 
 we can see that the results are improved since the proportion of P(estimated structure better than rank 0 structure) is much larger.
 
+In this case we can see that the RMSE is negative correlated with the objective function value. So it is make sense that we return $g_l = 0, g_f = 0$ if the $LB(estimated) < LB(g_l=0,g_f = 0)$.
 
 ## Session information
 
