--- a/analysis/flash_beta_test.Rmd
+++ b/analysis/flash_beta_test.Rmd
@@ -110,7 +110,7 @@ Y_miss[51:100,101:200] = NA
 
 ```{r}
 data = set_flash_data(Y)
-g1= flash_r1(data,verbose=TRUE)
+g1= flash_r1(data,verbose=F)
 gg1 = flashr::flash(Y,ash_para_l = list(method = "shrink"),ash_para_f = list(method = "shrink"))
 sum((as.vector(dat$L_true %*% t(dat$F_true))-as.vector(gg1$l %*% t(gg1$f)))^2)
 sum((as.vector(dat$L_true %*% t(dat$F_true))-as.vector(g1$EL %*% t(g1$EF)))^2)
@@ -124,7 +124,7 @@ the final result is rank zero, so I am not sure it is a problem
 
 ```{r}
 data.miss = set_flash_data(Y_miss)
-g1.miss = flash_r1(data.miss,verbose=TRUE)
+g1.miss = flash_r1(data.miss,verbose=F)
 ```
 
 ## missing value
@@ -153,7 +153,7 @@ Y_miss[51:100,101:200] = NA
 
 ```{r}
 data.miss = set_flash_data(Y_miss)
-g1.miss = flash_r1(data.miss,verbose=TRUE)
+g1.miss = flash_r1(data.miss,verbose=F)
 gg1.miss = flashr::flash(Y_miss,ash_para_l = list(method = "shrink"),ash_para_f = list(method = "shrink"))
 sum((as.vector(dat$L_true %*% t(dat$F_true))-as.vector(gg1.miss$l %*% t(gg1.miss$f)))^2)
 sum((as.vector(dat$L_true %*% t(dat$F_true))-as.vector(g1.miss$EL %*% t(g1.miss$EF)))^2)
@@ -183,7 +183,7 @@ for(i in 1:5){
                   noise = 5)
       Y = dat$Y
       data = set_flash_data(Y)
-      g1= flash_r1(data,verbose=TRUE)
+      g1= flash_r1(data,verbose=F)
       gg1 = flashr::flash(Y,ash_para_l = list(method = "shrink"),ash_para_f = list(method = "shrink"))
       RMSE_1[25*(i-1) + 5*(j-1) + k] = 
         sqrt(mean((as.vector(dat$L_true %*% t(dat$F_true))-as.vector(gg1$l %*% t(gg1$f)))^2))/sqrt(mean((as.vector(dat$L_true %*% t(dat$F_true))-0)^2))
@@ -211,7 +211,7 @@ dat = sim_K(K=1,N, P, SF = sparse_level_f[i],
             noise = 5)
 Y = dat$Y
 data = set_flash_data(Y)
-g1= flash_r1(data,verbose=TRUE)
+g1= flash_r1(data,verbose=F)
 gg1 = flashr::flash(Y,ash_para_l = list(method = "shrink"),ash_para_f = list(method = "shrink"))
 
   sqrt(mean((as.vector(dat$L_true %*% t(dat$F_true))-as.vector(gg1$l %*% t(gg1$f)))^2))/sqrt(mean((as.vector(dat$L_true %*% t(dat$F_true))-0)^2))
