--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -40,3 +40,9 @@ This is a simple test [first try](flash_beta_test.html)
 Initialization issue: [softimpute as initialization](missingimputeinitial.html)
 
 Click here to find the [null check for flashr2](NULLcheck.html) and [densen nu case](nullcheck2.html)
+
+### apply flashr2 for the examples in FLASH paper
+
+#### simulations
+
+Click here to check the [simulatoin result (rank one and rank three)](applyflahr2onsimulations.html)
