--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -46,3 +46,5 @@ Click here to find the [null check for flashr2](NULLcheck.html) and [densen nu c
 #### simulations
 
 Click here to check the [simulatoin result (rank one and rank three)](applyflahr2onsimulations.html)
+
+Here is a example to run `flashr2` on RCC [RCC template](GTEXzscoreTemplate.html)
