Files commited by wflow_commit.

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -48,3 +48,5 @@ Click here to find the [null check for flashr2](NULLcheck.html) and [densen nu c
 Click here to check the [simulatoin result (rank one and rank three)](applyflahr2onsimulations.html)
 
 Here is a example to run `flashr2` on RCC [RCC template](GTEXzscoreTemplate.html)
+
+Here is the template of OCV for `flashr2` on RCC [RCC OCV template](templateforOCV.Rmd)
